# TaleCast

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  default.nix  shell.nix  x
src/: cache.rs  config.rs  display.rs  download_tracker.rs  episode.rs  help_file.md  main.rs  opml.rs  patterns.rs  podcast.rs  tags.rs  utils.rs
