[package]
name = "cringecast"
version = "0.1.6"
edition = "2021"
description = "Simple CLI podcatcher"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
rss = "2.0.7"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.81"
dirs = "5.0.1"
indicatif = "0.17.8"
reqwest = { version = "0.12.2", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
futures = "0.3.30"
serde_json = "1.0.115"
unicode-width = "0.1.11"
id3 = "1.13.1"
clap = { version = "4.5.4", features = ["derive"] }
opml = "1.1.6"

