[package]
name = "talecast"
version = "0.1.30"
edition = "2021"
description = "Simple CLI podcatcher"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
rss = "2.0.7"
toml = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
dirs = "5.0.1"
indicatif = "0.17.8"
reqwest = { version = "0.12.2", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
futures = "0.3.30"
serde_json = "1.0.115"
unicode-width = "0.1.11"
id3 = "1.13.1"
clap = { version = "4.5.4", features = ["derive"] }
opml = "1.1.6"
regex = "1.10.4"
mime_guess = "2.0.4"
quick-xml = "0.31.0"
quickxml_to_serde = "0.6.0"
strum = "0.21"
strum_macros = "0.21"
uuid = "1.8.0"
dateparser = "0.2.1"
sanitize-filename = "0.5.0"
podcast_search = "0.5.0"
